# fp_growth

./: .gitignore  CMakeLists.txt  README.md
fp_growth/: CMakeLists.txt  fp_growth.sln  fp_growth.sln.DotSettings  fp_growth.vcxproj  fp_growth.vcxproj.filters
fp_growth/src/: fp_tree.h  frequent_pattern_tree.h  frequent_pattern_tree.hpp  frequent_pattern_tree_iterator.h  frequent_pattern_tree_node.h  main.cpp
fp_growth/test/: frequent_patter_tree_test.cpp  frequent_pattern_tree_test.cpp
src/: frequent_pattern_tree.hpp
test/: frequent_pattern_tree_test.cpp
